Fix to-do listing's style
The SVGs were growing in size all the time, and
stretching beyond the icon div. Had to do some
adjustments with display flex, and added special
class "eighteen-px-size" to hard-code their size.
Also limited max-size of task-listing(name of the
class) to 70% so as the listing doesn't stretch
too much

--- a/src/style.css
+++ b/src/style.css
@@ -53,6 +53,9 @@ body {
   /* #2C1E25 --- can be the color for the text
   #D1B0D2 -- color for the outline
   #C094BD --- color for highlight? */
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 /* top folder in the sidebar */
 .sidebar-task-folder {
@@ -71,6 +74,11 @@ body {
   border:1px solid rgb(192, 148, 189);
   border-radius: 5px;
   margin: 8px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 70%;
 }
 
 .task-listing-title {
@@ -110,6 +118,11 @@ body {
   color: rgb(192, 148, 189);
 }
 
-.test {
-  height: 20px;
+.icon-div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.eighteen-px-size {
+  max-height: 18px;
 }
